--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ZEIW",
   "version": "1.0.0",
-  "repository": "git@github.com:ZEIW/app.git",
+  "repository": "git@github.com:ZEIW/desktop.git",
   "license": "MIT",
   "author": "ZEIW",
   "main": "app/main.js",
