--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "dist": "electron-builder --win",
     "postinstall": "electron-builder install-app-deps",
+    "lint": "eslint --fix app/*",
     "pack": "electron-builder --dir",
     "start": "yarn install && electron app/main.js"
   },
@@ -21,6 +22,8 @@
   "devDependencies": {
     "electron": "^6.0.2",
     "electron-builder": "^21.2.0",
+    "eslint": "^6.1.0",
+    "eslint-config-prettier": "^6.0.0",
     "husky": "^3.0.3",
     "prettier": "^1.18.2",
     "pretty-quick": "^1.11.1"
