--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "zeiw-desktop",
+  "name": "ZEIW",
   "description": "Open source community-based game.",
   "license": "MIT",
   "author": "Next",
