--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
   },
   "devDependencies": {
     "electron": "^8.0.0",
-    "electron-builder": "^22.2.0",
+    "electron-builder": "^22.3.2",
     "husky": "^4.2.1",
-    "prettier": "1.19.1",
+    "prettier": "^1.19.1",
     "pretty-quick": "^2.0.1"
   },
   "build": {
